# Vili

./: .gitignore  CMakeLists.txt  Color.vili  Example.cpp  Functions.cpp  Functions.hpp  Main.cpp  README.md  Vili.cpp  Vili.hpp  ViliData.cpp  ViliData.hpp  test.vili  vcpkg.json
.github/: CONTRIBUTING.md
.github/workflows/: artifacts.yml  build.yml
cmake/: config.cmake.in
examples/01 - Hello- world/: hello.vili  main.cpp
examples/02 - Manipulating values/: main.cpp  values.vili
examples/03 - From scratch/: main.cpp
extlibs/tsl/: CMakeLists.txt
include/: ErrorHandler.hpp  Functions.hpp  Vili.hpp
include/vili/: Attribute.hpp  BaseAttribute.hpp  ComplexAttribute.hpp  ComplexNode.hpp  ContainerAttribute.hpp  DataParser.hpp  DataTemplate.hpp  LinkAttribute.hpp  ListAttribute.hpp  Node.hpp  NodeIterator.hpp  NodeValidator.hpp  Types.hpp  config.hpp  exceptions.hpp  node.hpp  types.hpp  utils.hpp  writer.hpp
include/vili/nodes/: array._hpp  data._hpp  object._hpp
include/vili/parser/: actions.hpp  grammar.hpp  grammar_errors.hpp  parser_state.hpp
src/: ErrorHandler.cpp  Functions.cpp  Vili.cpp  main.cpp  node.cpp  parser.cpp  utils.cpp  writer.cpp
src/parser/: parser.cpp  parser_state.cpp
src/vili/: Attribute.cpp  BaseAttribute.cpp  ComplexAttribute.cpp  ContainerAttribute.cpp  DataParser.cpp  DataTemplate.cpp  LinkAttribute.cpp  ListAttribute.cpp  NodeIterator.cpp  NodeValidator.inl  Types.cpp
tests/: CMakeLists.txt
tests/src/: comments.cpp  integer_parsing.cpp  iterators.cpp  main.cpp  merge.cpp  objects.cpp  parser.cpp  string_parsing.cpp  templates.cpp  writer.cpp
